@@ -539,10 +539,10 @@ MK: 0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789ABCDEF0123456789AB
         a*+
         [b-\xff\x{100}-\x{200}]?
         b#
-        [a-f]*
+        [a-f]*+
         [g-\xff\x{100}-\x{200}]*+
         #
-        [g-\xff\x{100}-\x{200}]*
+        [g-\xff\x{100}-\x{200}]*+
         [a-c]*+
         #
         [g-\xff\x{100}-\x{200}]*
